--- a/formulario.html
+++ b/formulario.html
@@ -39,8 +39,8 @@
                 </div>
                 <div class="col-md-6 mt-3">
                     <div class="md-form mb-0">
-                        <input type="text" id="email" placeholder="Apellido(s)" name="last-name" class="form-control"
-                            required>
+                        <input type="text" id="last-name" placeholder="Apellido(s)" name="last-name"
+                            class="form-control" required>
                     </div>
                 </div>
             </div>
@@ -78,23 +78,21 @@
                     </select>
                 </div>
             </div>
-            <div class="text-center mt-5">
-                <button class="btn btn-primary" type="submit" id="form">Enviar Formulario</button>
+            <div class="text-center mt-4">
+                <button type="submit" class="btn btn-primary">Enviar Formulario</button>
             </div>
         </form>
         </div>
     </main>
-    <footer class="fixed fixed-bottom">
-        <div>
-            <p style="text-align: center;">Seguro No Pagamos Cooperativa cuidamos a tu familia</p>
-        </div>
+    <footer>
+        <p style="text-align: center;">Seguro No Pagamos Cooperativa cuidamos a tu familia</p>
     </footer>
 
 </body>
-
+<script type="module" src="app.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
-<script type="module" src="app.js"></script>
+
 
 </html>
